# AoC_2025

./: .gitignore  README.md  new_day.py  pyproject.toml
days/day01/: solution.py  test2.txt  test_solution.py
days/day02/: solution.py  test_solution.py
days/day03/: solution.py  test_solution.py
days/day04/: solution.py  test_solution.py
days/day05/: solution.py  test_solution.py
days/day06/: solution.py  test_solution.py
days/day07/: solution.py  test_solution.py
days/day08/: solution.py  test_solution.py
template/: solution.py  test1.txt  test_solution.py
utils/: __init__.py  decoratos.py  input_handler.py
