[project]
name = "aoc-2025"
version = "0.1.0"
description = "Advent of Code 2025 solutions"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "pytest>=9.0.1",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]

[tool.setuptools]
py-modules = ["utils"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
